--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "genkit:dev": "genkit start -- tsx src/ai/genkit.ts",
+    "genkit:watch": "genkit start -- tsx --watch src/ai/genkit.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
